--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/healthcrosslogo"
+        android:icon="@mipmap/healthcrosslogo2"
         android:label="HealthCross"
-        android:roundIcon="@mipmap/healthcrosslogo"
+        android:roundIcon="@mipmap/healthcrosslogo2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
