--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Tracker"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Tracker"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".NewsActivity"
             android:screenOrientation="portrait" />
@@ -40,22 +40,28 @@
         <activity
             android:name=".InfoActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".Fractures"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Burns"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Scrapes"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Punctures"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Splinters"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".CPR"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Cut"
-            android:screenOrientation="portrait">
-
-        </activity>
+        <activity
+            android:name=".Fractures"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Burns"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Scrapes"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Punctures"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Splinters"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CPR"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Cut"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Flu"></activity>
     </application>
 
 </manifest>
