--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     })
     //add library
 
-    //compile 'com.gtihub.d-max:sports-dialog:0.7@aar'
+
+    //compile 'com.github.d-max:sports-dialog:0.7@aar'
 
     //compile 'com.google.code.gson.gson:2.8.2'
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -38,5 +39,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     testImplementation 'junit:junit:4.12'
 }
